fully functional mvp

--- a/rust_tif/Cargo.toml
+++ b/rust_tif/Cargo.toml
@@ -3,7 +3,9 @@ name = "rust_tif"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "rust_tif"
+path = "src/rust_lib.rs"
 
 [dependencies]
 gdal = "0.15.0"
