add rust read_all_band_1

--- a/rust_tif/Cargo.toml
+++ b/rust_tif/Cargo.toml
@@ -8,4 +8,5 @@ name = "rust_tif"
 path = "src/rust_lib.rs"
 
 [dependencies]
-gdal = "0.15.0"
+gdal = { version = "0.15.0", features = ["array"] }
+ndarray = { version = "0.15.6" }
